# InterfaceShap

./: CMakeLists.txt  README.md
InterfaceShap/: CMakeLists.txt
InterfaceShap/include/: BoundingBoxDimensions.h  Circle.h  PrintParams.h  Rectangle.h  Shape.h  Triangle.h
InterfaceShap/src/: Circle.cpp  InterfaceShap.cpp  Rectangle.cpp  Triangle.cpp
